# databao-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LOCAL_SETUP_README.md  README.md  hatch_build.py  pyproject.toml
.cursor/rules/: python-style.mdc
.github/workflows/: pre-commit.yml  publish-dev.yml  publish.yml  pytest.yml
client/: .gitignore  Makefile  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.mts
client/multimodal/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
databao/: __init__.py  api.py
databao/agent/: __init__.py  api.py
databao/configs/: agent.py  llm.py
databao/core/: __init__.py  agent.py  context.py  data_source.py  domain.py  env.py  executor.py  opa.py  sources.py  thread.py  visualizer.py
documents/: LOCAL_SETUP_README.md  MODIFICATIONS.md
examples/: demo.py  demo_dbt.py  latency.py  snowflake-example.py
examples/benchmark_template/: .env.template  .gitignore  README.md  benchmark_questions.csv  pyproject.toml
examples/benchmark_template/benchmark/: __init__.py  core.py  db.py  helpers.py  metrics.py
examples/benchmark_template/examples/: databao_benchmark.py  your_benchmark.py
scripts/: generate_licenses.py
tests/: test_agent.py  test_bigquery_adapter.py  test_demo_smoke.py  test_disk_cache.py  test_history_mode.py  test_jupyter_widget.py  test_llm_caching.py  test_llms.py  test_mcp.py  test_snowflake_adapter.py  test_text_frontend.py  test_vega_chat.py  test_visualisation_result.py
(+155 files in other folders)
